<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_HISTORY" Id="{57277164-9d39-4f29-aff4-016fce2c817d}">
    <Declaration><![CDATA[// History data
//
TYPE ST_HISTORY:
STRUCT
	
	// Members...
	arPower:       ARRAY[ 1..NUM_HISTORY_POINTS ] OF REAL; // Power history [%]
	arTemperature: ARRAY[ 1..NUM_HISTORY_POINTS ] OF REAL; // Temperature history [°C]
	arTempDiff:    ARRAY[ 1..NUM_HISTORY_POINTS ] OF REAL; // Temp. differences to setp. [°C]
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>